--- a/election-management/src/main/resources/application.properties
+++ b/election-management/src/main/resources/application.properties
@@ -1,16 +1,19 @@
 quarkus.application.name=election-management
 quarkus.shutdown.timeout=5S
 
-quarkus.flyway.migrate-at-start=true
+# TESTCONTAINERS
 quarkus.datasource.devservices.image-name=mariadb:10.11.2
+
+# FLYWAY
+quarkus.flyway.migrate-at-start=true
 
 # HIBERNATE
 quarkus.datasource.db-kind=mariadb
 quarkus.hibernate-orm.database.generation=none
-%dev.quarkus.hibernate-orm.log.bind-parameters=true
-%test.quarkus.hibernate-orm.log.bind-parameters=true
 %dev.quarkus.hibernate-orm.log.sql=true
 %test.quarkus.hibernate-orm.log.sql=true
+%dev.quarkus.hibernate-orm.log.bind-parameters=true
+%test.quarkus.hibernate-orm.log.bind-parameters=true
 
 # LOGGING
 %prod.quarkus.log.handler.gelf.enabled=true
@@ -21,3 +24,4 @@ quarkus.hibernate-orm.database.generation=none
 # OPENTELEMETRY
 %prod.quarkus.opentelemetry.enabled=true
 %dev.quarkus.opentelemetry.enabled=false
+%test.quarkus.opentelemetry.enabled=false
