--- a/election-management/src/main/resources/application.properties
+++ b/election-management/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 quarkus.application.name=election-management
 quarkus.shutdown.timeout=5S
+%dev.quarkus.http.port=8081
 
 # TESTCONTAINERS
 quarkus.datasource.devservices.image-name=mariadb:10.11.2
@@ -22,6 +23,7 @@ quarkus.hibernate-orm.database.generation=none
 %prod.quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n
 
 # OPENTELEMETRY
+#%prod.quarkus.datasource.jdbc.driver=io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver
 %prod.quarkus.opentelemetry.enabled=true
 %dev.quarkus.opentelemetry.enabled=false
 %test.quarkus.opentelemetry.enabled=false
