Aplicação para votação

--- a/election-management/src/main/resources/application.properties
+++ b/election-management/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 quarkus.application.name=election-management
 quarkus.shutdown.timeout=5S
-%dev.quarkus.http.port=8081
+#%dev.quarkus.http.port=8081
 
 # TESTCONTAINERS
 quarkus.datasource.devservices.image-name=mariadb:10.11.2
