--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - QUARKUS_DATASOURCE_PASSWORD=election-management-password
       #- QUARKUS_DATASOURCE_JDBC_URL=jdbc:otel:mariadb://database:3306/election-management
       - QUARKUS_DATASOURCE_JDBC_URL=jdbc:mariadb://database:3306/election-management
+      - QUARKUS_REDIS_HOSTS=redis://caching:6379
     labels:
       - traefik.http.routers.election-management.rule=Host(`vote.dio.localhost`) && PathPrefix(`/api`)
       - traefik.http.routers.election-management.entrypoints=web
