--- a/result-app/src/main/resources/application.properties
+++ b/result-app/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 quarkus.application.name=result-app
 quarkus.shutdown.timeout=5S
+%dev.quarkus.http.port=8083
+
+quarkus.rest-client.election-management.url=http://localhost:8081
+quarkus.rest-client.election-management.scope=javax.inject.Singleton
 
 # LOGGING
 %prod.quarkus.log.handler.gelf.enabled=true
